--- a/app/src/main/res/layout/activity_alfa_payment.xml
+++ b/app/src/main/res/layout/activity_alfa_payment.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/backtopaymetns"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24"
