--- a/app/src/main/res/layout/activity_detail_payment.xml
+++ b/app/src/main/res/layout/activity_detail_payment.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/backToContact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24"
@@ -225,5 +225,13 @@
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/PaymentMetode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Continue Payment"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="#693BB8"/>
 
 </LinearLayout>
