--- a/app/src/main/res/layout/activity_seat.xml
+++ b/app/src/main/res/layout/activity_seat.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/backHomePage"
+            android:id="@+id/backHomeDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
