--- a/app/src/main/res/layout/ratingpop.xml
+++ b/app/src/main/res/layout/ratingpop.xml
@@ -32,53 +32,26 @@
             android:textColor="@color/gray"
             android:textSize="12dp" />
 
-        <TextView
-            android:id="@+id/judul3"
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@android:style/Widget.Material.Light.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/judul1"
-            android:layout_marginTop="15dp"
-            android:paddingLeft="25dp"
-            android:text="PO NAME"
-            android:textColor="@color/gray"
-            android:textSize="12dp" />
+            android:layout_centerInParent="true"
+            android:layout_margin="20dp"
+            android:background="#000000"
+            android:backgroundTint="#171717"
+            android:numStars="5"
+            android:rating="1.2" />
 
-        <TextView
-            android:id="@+id/namabis"
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/judul3"
-            android:layout_marginTop="5dp"
-            android:paddingLeft="25dp"
-            android:text="KENCANA"
-            android:textColor="@color/black"
-            android:textSize="14dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/judul4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/judul1"
-            android:layout_marginTop="15dp"
-            android:layout_alignParentRight="true"
-            android:paddingRight="25dp"
-            android:text="DEPARTURE DATE"
-            android:textColor="@color/gray"
-            android:textSize="15dp" />
-
-        <TextView
-            android:id="@+id/judul5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/judul4"
-            android:layout_marginTop="5dp"
-            android:paddingRight="25dp"
-            android:text="18 nov 22"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+            android:layout_below="@+id/ratingBar"
+            android:text="Rate"
+            android:layout_centerInParent="true"
+            android:backgroundTint="@color/black"/>
 
     </RelativeLayout>
 
