--- a/app/src/main/res/layout/singleitem.xml
+++ b/app/src/main/res/layout/singleitem.xml
@@ -45,18 +45,41 @@
           android:layout_marginTop="5dp"
           android:text="Hours"
           android:textColor="@color/purple_200"
-          android:textSize="20sp"/>
+          android:textSize="20sp" />
 
       <TextView
-          android:id="@+id/BusEstimate"
+          android:id="@+id/BusEstimateAwal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/BusHours"
           android:layout_marginLeft="13dp"
           android:layout_marginTop="5dp"
-          android:text="Hours"
+          android:text="0"
           android:textColor="@color/gray"
-          android:textSize="15sp"/>
+          android:textSize="15sp" />
+
+      <TextView
+          android:id="@+id/separator"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@id/BusHours"
+          android:layout_toRightOf="@+id/BusEstimateAwal"
+          android:layout_marginLeft="13dp"
+          android:layout_marginTop="5dp"
+          android:text="-"
+          android:textColor="@color/gray"
+          android:textSize="15sp" />
+      <TextView
+          android:id="@+id/BusEstimateAkhir"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@id/BusHours"
+          android:layout_toRightOf="@+id/separator"
+          android:layout_marginLeft="13dp"
+          android:layout_marginTop="5dp"
+          android:text="0"
+          android:textColor="@color/gray"
+          android:textSize="15sp" />
 
       <View
           android:id="@+id/divider"
@@ -111,6 +134,19 @@
           android:textSize="10sp"
           android:backgroundTint="@color/biru"/>
 
+      <TextView
+          android:id="@+id/namaAwal"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text=""
+          android:visibility="invisible"/>
+
+      <TextView
+          android:id="@+id/namaAkhir"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text=""
+          android:visibility="invisible"/>
 
    </RelativeLayout>
 
