--- a/app/src/main/res/layout/singleorder.xml
+++ b/app/src/main/res/layout/singleorder.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <com.google.android.material.card.MaterialCardView
@@ -51,18 +51,18 @@
                 android:padding="20dp">
 
                 <TextView
-                    android:id="@+id/namabis"
+                    android:id="@+id/namabus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Sempati"
-                    android:textColor="@color/purple_700"/>
+                    android:textColor="@color/purple_700" />
 
                 <TextView
                     android:id="@+id/terminal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/namabis"
+                    android:layout_below="@+id/namabus"
                     android:layout_weight="1"
                     android:text="terminal"
                     android:textColor="@color/purple_700"/>
@@ -71,11 +71,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:gravity="center_vertical"
                     android:layout_centerVertical="true"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:text="SUCCES"
-                    android:textColor="#21BC16"/>
+                    android:textColor="#21BC16" />
 
             </RelativeLayout>
 
